--- a/contact.html
+++ b/contact.html
@@ -48,18 +48,16 @@
                 </div>
                 <h2>Contact Us</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni praesentium at porro necessitatibus
-                    reiciendis. Doloribus tempore perferendis suscipit quia, consequuntur neque ducimus ex corporis
-                    quam.
+                    If you require clarifications on any of the courses or the admission process, we are happy to help
                 </p>
                 <ul class="contact_details">
                     <li>
                         <i class="uil uil-phone-times"></i>
-                        <h5>+91 9876543210</h5>
+                        <h5>+91 8086651651</h5>
                     </li>
                     <li>
                         <i class="uil uil-envelope"></i>
-                        <h5>support@luminar.com</h5>
+                        <h5>contact@luminartechnolab.com</h5>
                     </li>
                     <li>
                         <i class="uil uil-location-point"></i>
@@ -68,16 +66,16 @@
                 </ul>
                 <ul class="contact_socials">
                     <li>
-                        <a href="#"><i class="uil uil-facebook-f"></i></a>
+                        <a href="https://www.facebook.com/luminartechnolab/"><i class="uil uil-facebook-f"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="uil uil-instagram-alt"></i></a>
+                        <a href="https://www.instagram.com/luminartechnolab/"><i class="uil uil-instagram-alt"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="uil uil-twitter"></i></a>
+                        <a href="https://twitter.com/luminartechno/"><i class="uil uil-twitter"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="uil uil-linkedin-alt"></i></a>
+                        <a href="https://www.linkedin.com/company/luminartechnolab"><i class="uil uil-linkedin-alt"></i></a>
                     </li>
                 </ul>
             </aside>
@@ -99,7 +97,7 @@
 
 
 
-    
+
     <footer>
         <div class="container footer_container">
             <div class="footer_1">
@@ -145,7 +143,8 @@
                         <a href="https://twitter.com/luminartechno/"><i class="uil uil-twitter"></i></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/company/luminartechnolab"><i class="uil uil-linkedin-alt"></i></a>
+                        <a href="https://www.linkedin.com/company/luminartechnolab"><i
+                                class="uil uil-linkedin-alt"></i></a>
                     </li>
                 </ul>
             </div>
