--- a/courses.html
+++ b/courses.html
@@ -43,10 +43,10 @@
                     <img src="./images/course1.jpg" alt="no image">
                 </div>
                 <div class="course_info">
-                    <h4>Responsive Social Media Website UI Design</h4>
+                    <h4>MEA(R)N Stack Web Development Expert - Angular & React</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nisi, placeat deserunt velit
-                        aliquid animi nobis.
+                        HTML, CSS, Bootstrap, Javascript, Typescript, Git, Angular, React.js, Node.js, Express.js &
+                        MongoDB
                     </p>
                     <a href="courses.html" class="btn btn-primary">Learn More</a>
                 </div>
@@ -57,10 +57,10 @@
                     <img src="./images/course2.jpg" alt="no image">
                 </div>
                 <div class="course_info">
-                    <h4>Responsive SmartHome Website Design</h4>
+                    <h4>Data Science - ML - AI - Big Data with Cloud & TABLEAU</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nisi, placeat deserunt velit
-                        aliquid animi nobis.
+                        Python, Hadoop, Spark, Data Analytics, Linear Algebra, Statistics, Probability Concepts, Machine
+                        Learning, Deep Learning,
                     </p>
                     <a href="courses.html" class="btn btn-primary">Learn More</a>
                 </div>
@@ -71,10 +71,10 @@
                     <img src="./images/course3.jpg" alt="no image">
                 </div>
                 <div class="course_info">
-                    <h4>Responsive Admin Dashboard UI Design</h4>
+                    <h4>Data Science - ML - AI - Big Data with Cloud & TABLEAU</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nisi, placeat deserunt velit
-                        aliquid animi nobis.
+                        Python, Hadoop, Spark, Data Analytics, Linear Algebra, Statistics, Probability Concepts, Machine
+                        Learning, Deep Learning, Data Science, Art
                     </p>
                     <a href="courses.html" class="btn btn-primary">Learn More</a>
                 </div>
@@ -85,10 +85,10 @@
                     <img src="./images/course4.jpg" alt="no image">
                 </div>
                 <div class="course_info">
-                    <h4>Responsive Admin Dashboard UI Design</h4>
+                    <h4>Python Django - Angular- Full Stack Web Development Expert</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nisi, placeat deserunt velit
-                        aliquid animi nobis.
+                        Core Python, Basics of Programming, Unix Commands, Advanced Python, Django Framework, REST API,
+                        Git, Angular, Web.
                     </p>
                     <a href="courses.html" class="btn btn-primary">Learn More</a>
                 </div>
@@ -99,10 +99,10 @@
                     <img src="./images/course5.jpg" alt="no image">
                 </div>
                 <div class="course_info">
-                    <h4>Responsive Admin Dashboard UI Design</h4>
+                    <h4>Asp.net MVC with Angular - Full Stack</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nisi, placeat deserunt velit
-                        aliquid animi nobis.
+                        C# Programming, Object Oriented Development, ASP .Net Web and Windows Application Development,
+                        MS SQL, MVC
                     </p>
                     <a href="courses.html" class="btn btn-primary">Learn More</a>
                 </div>
@@ -113,10 +113,10 @@
                     <img src="./images/course6.jpg" alt="no image">
                 </div>
                 <div class="course_info">
-                    <h4>Responsive Admin Dashboard UI Design</h4>
+                    <h4>Android Developer Expert Training In Kochi- Flutter</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nisi, placeat deserunt velit
-                        aliquid animi nobis.
+                        Dart, Flutter Introduction to Android, Android Studio, AndroidManifest.xml, Directories, Layout
+                        Designing, Basics & Intents, UI
                     </p>
                     <a href="courses.html" class="btn btn-primary">Learn More</a>
                 </div>
@@ -124,13 +124,13 @@
 
             <article class="course">
                 <div class="course_image">
-                    <img src="./images/course7.jpg" alt="no image">
+                    <img src="./images/course15.jpg" alt="no image">
                 </div>
                 <div class="course_info">
-                    <h4>Responsive Admin Dashboard UI Design</h4>
+                    <h4>DATA SCIENCE - ML - AI - & TABLEAU</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nisi, placeat deserunt velit
-                        aliquid animi nobis.
+                        Python, Exploratory Data Analytics, Linear Algebra, Statistics, Probability Concepts, Machine
+                        Learning, Deep Learning, Data
                     </p>
                     <a href="courses.html" class="btn btn-primary">Learn More</a>
                 </div>
@@ -141,10 +141,23 @@
                     <img src="./images/course8.jpg" alt="no image">
                 </div>
                 <div class="course_info">
-                    <h4>Responsive Admin Dashboard UI Design</h4>
+                    <h4>Business Analytics - Power BI & Tableau</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nisi, placeat deserunt velit
-                        aliquid animi nobis.
+                        Introduction to Business Intelligence, SQL, Data Warehousing, Power BI, Tableau
+                    </p>
+                    <a href="courses.html" class="btn btn-primary">Learn More</a>
+                </div>
+            </article>
+
+            <article class="course">
+                <div class="course_image">
+                    <img src="./images/course9.jpg" alt="no image">
+                </div>
+                <div class="course_info">
+                    <h4>Java Spring Full Stack Development</h4>
+                    <p>
+                        Important Spring Annotations, IOC Containers,Dependency injection,Auto Wiring, Spring Data JPA,
+                        Intrduction to Spring
                     </p>
                     <a href="courses.html" class="btn btn-primary">Learn More</a>
                 </div>
@@ -163,7 +176,7 @@
 
 
 
-    
+
     <footer>
         <div class="container footer_container">
             <div class="footer_1">
@@ -209,7 +222,8 @@
                         <a href="https://twitter.com/luminartechno/"><i class="uil uil-twitter"></i></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/company/luminartechnolab"><i class="uil uil-linkedin-alt"></i></a>
+                        <a href="https://www.linkedin.com/company/luminartechnolab"><i
+                                class="uil uil-linkedin-alt"></i></a>
                     </li>
                 </ul>
             </div>
